syntax = "proto3";
option csharp_namespace = "DomoCore.Shared.GrpcProtos";

package web;

service Web{
	rpc WebReportInputs (Empty) returns (WebInputReply);
	rpc WebReportOutputs (Empty) returns (WebOutputReply);
}


message Empty{
}

message WebInputReply{
	int32 Value = 1;
}

message WebOutputReply{
	int32 Value = 1;
}